add some design

--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Fontawesome link -->
+    <script src="https://kit.fontawesome.com/3283a53df1.js" crossorigin="anonymous"></script>
   </body>
 </html>
